# RetroMMO-api-hclient

./: .gitignore  BuildNotes.md  CHANGELOG.md  LICENSE  README.md  RetroMMOAPI.cabal  retrommoapi.cabal  stack.yaml  time_notes.hs
.github/workflows/: haskell.yml
examples/data/: Evan.json  leaderboards.json  players.json
src/: RetroMMOAPI.hs
src/RetroMMOAPI/: Environment.hs  Headers.hs  Request.hs  Types.hs  Unauthenticated.hs
src/RetroMMOAPI/Unauthenticated/: API.hs
src/Servant/API/: FileExtension.hs
src/ServantContrib/API/: FileExtension.hs
src/example/request/: Main.hs
