cabal-version:      2.4

name:         RetroMMOAPI
version:      0.0.0.0

synopsis:     RetroMMO Api Client
description:  REST API client for the game RetroMMO created by Evan Norton
category:     Web
bug-reports:  https://github.com/adpextwindong/RetroMMO-api-hclient/issues
homepage:     https://github.com/adpextwindong/RetroMMO-api-hclient
license:      BSD-2-Clause
license-file: LICENSE
author:       George Takumi Crary <tcrary@gmail.com>
maintainer:   George Takumi Crary <tcrary@gmail.com>
copyright:    2021 George Takumi Crary <tcrary@gmail.com>

extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/adpextwindong/RetroMMO-api-hclient

library
    default-language: Haskell2010
    hs-source-dirs:   src
    exposed-modules:
        RetroMMOAPI.Environment
        RetroMMOAPI.Unauthenticated
        RetroMMOAPI.Types
        RetroMMOAPI.Request
        RetroMMOAPI.Headers
    build-depends:    base >=4.12.0.0 && < 5
                     ,bytestring
                     ,text
                     ,aeson >= 1.5.6.0
                     ,time
                     ,servant
                     ,servant-client
                     ,http-api-data
                     ,http-client
                     ,http-client-tls
                     --,HsOpenSSL
    extra-lib-dirs: c:/msys64/mingw64/lib
