cabal-version:      2.4

name:         retrommoapi
version:      0.0.0.0

synopsis:     RetroMMO Api Client
description:  REST API client for the game RetroMMO created by Evan Norton
category:     Web
bug-reports:  https://github.com/adpextwindong/RetroMMO-api-hclient/issues
homepage:     https://github.com/adpextwindong/RetroMMO-api-hclient
license:      BSD-2-Clause
license-file: LICENSE
author:       George Takumi Crary <tcrary@gmail.com>
maintainer:   George Takumi Crary <tcrary@gmail.com>
copyright:    2021 George Takumi Crary <tcrary@gmail.com>

extra-source-files:
    README.md
    CHANGELOG.md

source-repository head
    type: git
    location: https://github.com/adpextwindong/RetroMMO-api-hclient

common shared-properties
    default-language: Haskell2010
    build-depends:    base >= 4.13.0 && < 5
                     ,bytestring >= 0.10.10 && < 0.11
                     ,text >= 1.2.4 && < 1.3
                     ,aeson >= 1.5.6.0 && < 1.6
                     ,time >= 1.9.3 && < 1.10
                     ,servant >= 0.14 && < 0.19
                     ,servant-client >= 0.14 && < 0.19
                     ,servant-client-core >= 0.14 && < 0.19
                     ,http-api-data >= 0.4.3 && < 0.5
                     ,http-client >= 0.7.9 && < 0.8
                     ,http-client-tls >= 0.3.5 && < 0.4
library
    import: shared-properties
    default-language: Haskell2010
    hs-source-dirs:   src
    exposed-modules:
        RetroMMOAPI.Environment
        RetroMMOAPI.Unauthenticated
        RetroMMOAPI.Types
        RetroMMOAPI.Request
        RetroMMOAPI.Headers
        RetroMMOAPI.Unauthenticated.API
        ServantContrib.API.FileExtension

executable test-request
    import: shared-properties
    main-is: Main.hs
    default-language: Haskell2010
    build-depends:
        base >= 4.13.0 && < 5
       ,retrommoapi
    hs-source-dirs:
        src/example/request/
